@@ -2,5 +2,5 @@
 from matplotlib.matlab import *
 
 figure(1)
-plot([0],[0])
+plot([0],[0],'o')
 show()
